tests/testcases/errors/BCE0089-11.boo
"""
BCE0089-11.boo(8,9): BCE0089: Type 'IFoo' already has a definition for 'foo(int)'.
"""
interface IFoo:

	def foo(item as int)
	
	def foo(item as int)
